--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,16 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-config.properties
-
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
+*.class
+
+config.properties
+debug.log
+*.puml
 
 ### Eclipse ###
 .apt_generated
