Build properties if ci-runs

--- a/src/test/resources/config.properties.TEMPLATE
+++ b/src/test/resources/config.properties.TEMPLATE
@@ -1,7 +1,7 @@
 browser = chrome
-url = https://study.traineracademy.org/home
-username =
-password = 
+url = System.getenv("BASE_URL")
+username = System.getenv("USERNAME")
+password = System.getenv("PASSWORD")
 headless = false
 width = 1920
 height = 1080
