added TestsPage Locators (#9)
* added testTutorModeWithRandomCheckboxInDomain() and testTutorModeWithRandomCheckboxInChapter()

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,13 @@ target/
 *.iml
 *.ipr
 *.class
+*.xml
 
 config.properties
 debug.log
 *.puml
+testTracing/
+logs/
 
 ### Eclipse ###
 .apt_generated
