--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,12 @@ jobs:
           path: target/surefire-reports/TEST-*.xml
           reporter: java-junit
 
-      - name: Attach test trace
+      - name: Attach artifacts on failure
         uses: actions/upload-artifact@v3
         if: failure()
         with:
-          name: testTracing
-          path: testTracing/
+          name: Artifacts
+          path: |
+            testTracing/
+            tokens/
+
